--- a/11_2_random_forest.ipynb
+++ b/11_2_random_forest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0b65be6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.datasets import load_iris\n",
-    "iris = load_iris()"
+    "iris = load_iris()\n"
    ]
   },
   {
