k folder hyper parameter tuning

--- a/12_1_k_fold_cross_validation.ipynb
+++ b/12_1_k_fold_cross_validation.ipynb
@@ -356,23 +356,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "514e5298",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.93489149, 0.94824708, 0.91318865])"
+       "array([0.93322204, 0.93823038, 0.93656093])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cross_val_score(RandomForestClassifier(n_estimators=40),digits.data, digits.target,cv=3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "32f3101d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8753724394785847\n",
+      "0.9382184978274364\n",
+      "0.9315332091868405\n",
+      "0.9398944754810676\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "scores1 = cross_val_score(RandomForestClassifier(n_estimators=5),digits.data, digits.target, cv=10)\n",
+    "print(np.average(scores1))\n",
+    "\n",
+    "scores2 = cross_val_score(RandomForestClassifier(n_estimators=20),digits.data, digits.target, cv=10)\n",
+    "print(np.average(scores2))\n",
+    "\n",
+    "scores3 = cross_val_score(RandomForestClassifier(n_estimators=30),digits.data, digits.target, cv=10)\n",
+    "print(np.average(scores3))\n",
+    "\n",
+    "scores4 = cross_val_score(RandomForestClassifier(n_estimators=40),digits.data, digits.target, cv=10)\n",
+    "print(np.average(scores4))\n"
    ]
   }
  ],
