k fold for iris flower classification

--- a/12_1_k_fold_cross_validation.ipynb
+++ b/12_1_k_fold_cross_validation.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "32f3101d",
    "metadata": {},
    "outputs": [
@@ -385,10 +385,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8753724394785847\n",
-      "0.9382184978274364\n",
-      "0.9315332091868405\n",
-      "0.9398944754810676\n"
+      "0.8775450031036623\n",
+      "0.935431409062694\n",
+      "0.9415735567970204\n",
+      "0.9465859714463066\n"
      ]
     }
    ],
@@ -404,6 +404,38 @@
     "print(np.average(scores3))\n",
     "\n",
     "scores4 = cross_val_score(RandomForestClassifier(n_estimators=40),digits.data, digits.target, cv=10)\n",
+    "print(np.average(scores4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "64237542",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8773319327731093\n",
+      "0.9366106442577031\n",
+      "0.9507913165266106\n",
+      "0.9582843137254902\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "scores1 = cross_val_score(RandomForestClassifier(n_estimators=5),X_train, y_train, cv=10)\n",
+    "print(np.average(scores1))\n",
+    "\n",
+    "scores2 = cross_val_score(RandomForestClassifier(n_estimators=20),X_train, y_train, cv=10)\n",
+    "print(np.average(scores2))\n",
+    "\n",
+    "scores3 = cross_val_score(RandomForestClassifier(n_estimators=30),X_train, y_train, cv=10)\n",
+    "print(np.average(scores3))\n",
+    "\n",
+    "scores4 = cross_val_score(RandomForestClassifier(n_estimators=40),X_train, y_train, cv=10)\n",
     "print(np.average(scores4))\n"
    ]
   }
