hyper parameter tuning

--- a/13_1_k_means_clustering.ipynb
+++ b/13_1_k_means_clustering.ipynb
@@ -284,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "91e0a935",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x221769f2450>"
+       "<matplotlib.legend.Legend at 0x22177487020>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
