--- a/6_train_test_split.ipynb
+++ b/6_train_test_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "a15f85b7",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\P'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "C:\\Users\\pilot\\AppData\\Local\\Temp\\ipykernel_4104\\568646944.py:2: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "C:\\Users\\pilot\\AppData\\Local\\Temp\\ipykernel_11908\\568646944.py:2: SyntaxWarning: invalid escape sequence '\\P'\n",
       "  df = pd.read_csv(\"E:\\Projects\\ml-learnings\\Project Dependencies\\carprices.csv\")\n"
      ]
     },
@@ -86,7 +86,7 @@
        "4    46000         4          31500"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,17 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "4d3e5416",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x20504db3800>"
+       "<matplotlib.collections.PathCollection at 0x19a617bbfb0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -131,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "7be131e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x20504e14ef0>"
+       "<matplotlib.collections.PathCollection at 0x19a629417f0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "6271aecb",
    "metadata": {},
    "outputs": [
@@ -320,19 +320,19 @@
        "19    52000         5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = df[['Mileage','Age(yrs)']]\n",
-    "X"
+    "inputs = df[['Mileage','Age(yrs)']]\n",
+    "inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "f01a8fcb",
    "metadata": {},
    "outputs": [
@@ -362,30 +362,30 @@
        "Name: Sell Price($), dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = df['Sell Price($)']\n",
-    "y"
+    "target = df['Sell Price($)']\n",
+    "target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "b5dd603c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=10)"
+    "X_train, X_test, y_train, y_test = train_test_split(inputs, target, test_size=0.2, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "bdae03d5",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "9     67000         6"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "3a266bec",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "e23d4bdd",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "efd4392b",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
        "array([20474.0745775 , 16352.07892168, 25174.14834912, 27197.42175439])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "e8afd2eb",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
        "Name: Sell Price($), dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "aaa1ea96",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1200,7 @@
        "0.733233959309014"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
