hyper parameter tuning with digits dataset

--- a/15_1_hyper_parameter_tuning.ipynb
+++ b/15_1_hyper_parameter_tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "1e0e30b9",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "2fdfa21c",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "f870099e",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "fecb12ff",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "471c99a7",
    "metadata": {},
    "outputs": [],
@@ -504,17 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "77c949ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9333333333333333"
+       "0.9"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "8ff2745d",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "np.float64(0.9666666666666666)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,21 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "ee9ef4fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.00226078, 0.00159588, 0.00261283, 0.00228534, 0.0015913 ,\n",
-       "        0.00059605]),\n",
-       " 'std_fit_time': array([0.00116526, 0.00097684, 0.00101815, 0.00092967, 0.00142547,\n",
-       "        0.00074375]),\n",
-       " 'mean_score_time': array([0.00152068, 0.00128894, 0.00082726, 0.00114269, 0.00142164,\n",
-       "        0.00323443]),\n",
-       " 'std_score_time': array([0.00079252, 0.00074748, 0.00051948, 0.00077627, 0.00215588,\n",
-       "        0.00285401]),\n",
+       "{'mean_fit_time': array([0.        , 0.        , 0.00070124, 0.        , 0.        ,\n",
+       "        0.00092235]),\n",
+       " 'std_fit_time': array([0.        , 0.        , 0.00140247, 0.        , 0.        ,\n",
+       "        0.00184469]),\n",
+       " 'mean_score_time': array([0.        , 0.00243492, 0.        , 0.        , 0.        ,\n",
+       "        0.        ]),\n",
+       " 'std_score_time': array([0.        , 0.00486984, 0.        , 0.        , 0.        ,\n",
+       "        0.        ]),\n",
        " 'param_C': masked_array(data=[1, 1, 10, 10, 20, 20],\n",
        "              mask=[False, False, False, False, False, False],\n",
        "        fill_value=999999),\n",
@@ -595,7 +595,7 @@
        " 'rank_test_score': array([5, 1, 1, 4, 1, 5], dtype=int32)}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "53e303f4",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "1c68c2ef",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
        "5       20       linear         0.966667"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "58b31dc2",
    "metadata": {},
    "outputs": [
@@ -761,33 +761,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.002051</td>\n",
-       "      <td>0.001342</td>\n",
-       "      <td>0.001320</td>\n",
-       "      <td>0.001355</td>\n",
+       "      <td>0.002647</td>\n",
+       "      <td>0.005294</td>\n",
+       "      <td>0.000194</td>\n",
+       "      <td>0.000388</td>\n",
        "      <td>linear</td>\n",
        "      <td>20</td>\n",
        "      <td>{'kernel': 'linear', 'C': 20}</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.900000</td>\n",
        "      <td>0.933333</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.966667</td>\n",
        "      <td>0.042164</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000403</td>\n",
-       "      <td>0.000806</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000512</td>\n",
+       "      <td>0.001024</td>\n",
        "      <td>rbf</td>\n",
        "      <td>10</td>\n",
        "      <td>{'kernel': 'rbf', 'C': 10}</td>\n",
        "      <td>0.966667</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.966667</td>\n",
        "      <td>0.966667</td>\n",
        "      <td>1.0</td>\n",
@@ -797,20 +797,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.001284</td>\n",
-       "      <td>0.002567</td>\n",
-       "      <td>0.003329</td>\n",
-       "      <td>0.003394</td>\n",
-       "      <td>linear</td>\n",
-       "      <td>10</td>\n",
-       "      <td>{'kernel': 'linear', 'C': 10}</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.900000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'kernel': 'rbf', 'C': 1}</td>\n",
        "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.933333</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.973333</td>\n",
-       "      <td>0.038873</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.021082</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -819,27 +819,27 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time param_kernel  \\\n",
-       "0       0.002051      0.001342         0.001320        0.001355       linear   \n",
-       "1       0.000403      0.000806         0.000000        0.000000          rbf   \n",
-       "2       0.001284      0.002567         0.003329        0.003394       linear   \n",
+       "0       0.002647      0.005294         0.000194        0.000388       linear   \n",
+       "1       0.000000      0.000000         0.000512        0.001024          rbf   \n",
+       "2       0.000000      0.000000         0.000000        0.000000          rbf   \n",
        "\n",
        "   param_C                         params  split0_test_score  \\\n",
        "0       20  {'kernel': 'linear', 'C': 20}           1.000000   \n",
        "1       10     {'kernel': 'rbf', 'C': 10}           0.966667   \n",
-       "2       10  {'kernel': 'linear', 'C': 10}           1.000000   \n",
+       "2        1      {'kernel': 'rbf', 'C': 1}           0.966667   \n",
        "\n",
        "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
-       "0                1.0           0.900000           0.933333                1.0   \n",
-       "1                1.0           0.966667           0.966667                1.0   \n",
-       "2                1.0           0.900000           0.966667                1.0   \n",
+       "0           1.000000           0.900000           0.933333                1.0   \n",
+       "1           1.000000           0.966667           0.966667                1.0   \n",
+       "2           0.966667           0.966667           0.933333                1.0   \n",
        "\n",
        "   mean_test_score  std_test_score  rank_test_score  \n",
-       "0         0.966667        0.042164                3  \n",
+       "0         0.966667        0.042164                2  \n",
        "1         0.980000        0.016330                1  \n",
-       "2         0.973333        0.038873                2  "
+       "2         0.966667        0.021082                2  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "787d6fe4",
    "metadata": {},
    "outputs": [],
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "53c5a32b",
    "metadata": {},
    "outputs": [
@@ -1003,8 +1003,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>0.953333</td>\n",
-       "      <td>{'n_estimators': 5}</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>{'n_estimators': 10}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1019,11 +1019,11 @@
       "text/plain": [
        "                 model  best_score                best_params\n",
        "0                  svm    0.980000  {'C': 1, 'kernel': 'rbf'}\n",
-       "1        random_forest    0.953333        {'n_estimators': 5}\n",
+       "1        random_forest    0.966667       {'n_estimators': 10}\n",
        "2  logistic_regression    0.966667                   {'C': 5}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
