--- a/15_1_hyper_parameter_tuning.ipynb
+++ b/15_1_hyper_parameter_tuning.ipynb
@@ -614,12 +614,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "53e303f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(clf.cv_results_)"
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df"
    ]
   },
   {
