--- a/17_2_knn.ipynb
+++ b/17_2_knn.ipynb
@@ -1310,13 +1310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "c8847dde",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_params = {\n",
-    "    'svm': {\n",
+    "    'KNeighborsClassifier': {\n",
     "        'model': KNeighborsClassifier(),\n",
     "        'params' : {\n",
     "            'n_neighbors': [3,5,10]\n",
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "id": "45182af5",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>svm</td>\n",
+       "      <td>KNeighborsClassifier</td>\n",
        "      <td>0.966622</td>\n",
        "      <td>{'n_neighbors': 3}</td>\n",
        "    </tr>\n",
@@ -1369,11 +1369,11 @@
        "</div>"
       ],
       "text/plain": [
-       "  model  best_score         best_params\n",
-       "0   svm    0.966622  {'n_neighbors': 3}"
+       "                  model  best_score         best_params\n",
+       "0  KNeighborsClassifier    0.966622  {'n_neighbors': 3}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
