--- a/feature_engineering/3_1_iqr.ipynb
+++ b/feature_engineering/3_1_iqr.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "82c2a369",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,8 @@
    ],
    "source": [
     "df_no_outlier = df[(df.height>lower_limit)&(df.height<upper_limit)]\n",
-    "df_no_outlier\n"
+    "df_no_outlier\n",
+    "\n"
    ]
   }
  ],
