--- a/feature_engineering/3_1_iqr.ipynb
+++ b/feature_engineering/3_1_iqr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b642239c",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"E:\\Projects\\ml-learnings\\project_dependencies\\heights.csv\")\n",
-    "df\n"
+    "df.head()\n"
    ]
   },
   {
