--- a/feature_engineering/3_1_iqr.ipynb
+++ b/feature_engineering/3_1_iqr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b642239c",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\P'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "C:\\Users\\pilot\\AppData\\Local\\Temp\\ipykernel_13232\\1924682361.py:2: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "C:\\Users\\pilot\\AppData\\Local\\Temp\\ipykernel_3148\\4088657309.py:2: SyntaxWarning: invalid escape sequence '\\P'\n",
       "  df = pd.read_csv(\"E:\\Projects\\ml-learnings\\project_dependencies\\heights.csv\")\n"
      ]
     },
@@ -67,74 +67,20 @@
        "      <td>virat</td>\n",
        "      <td>4.9</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>khusbu</td>\n",
-       "      <td>5.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>dmitry</td>\n",
-       "      <td>6.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>selena</td>\n",
-       "      <td>6.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>john</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>imran</td>\n",
-       "      <td>14.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>jose</td>\n",
-       "      <td>6.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>deepika</td>\n",
-       "      <td>5.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>yoseph</td>\n",
-       "      <td>1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>binod</td>\n",
-       "      <td>5.5</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       name  height\n",
-       "0     mohan     5.9\n",
-       "1     maria     5.2\n",
-       "2     sakib     5.1\n",
-       "3       tao     5.5\n",
-       "4     virat     4.9\n",
-       "5    khusbu     5.4\n",
-       "6    dmitry     6.2\n",
-       "7    selena     6.5\n",
-       "8      john     7.1\n",
-       "9     imran    14.5\n",
-       "10     jose     6.1\n",
-       "11  deepika     5.6\n",
-       "12   yoseph     1.2\n",
-       "13    binod     5.5"
+       "    name  height\n",
+       "0  mohan     5.9\n",
+       "1  maria     5.2\n",
+       "2  sakib     5.1\n",
+       "3    tao     5.5\n",
+       "4  virat     4.9"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "602e56c6",
    "metadata": {},
    "outputs": [
@@ -224,7 +170,7 @@
        "max    14.500000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c8e10c3b",
    "metadata": {},
    "outputs": [
@@ -245,7 +191,7 @@
        "(np.float64(5.25), np.float64(6.175))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "925716c0",
    "metadata": {},
    "outputs": [
@@ -268,7 +214,7 @@
        "np.float64(0.9249999999999998)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a23b705a",
    "metadata": {},
    "outputs": [
@@ -290,7 +236,7 @@
        "(np.float64(3.8625000000000003), np.float64(7.5625))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c66856f8",
    "metadata": {},
    "outputs": [
@@ -353,7 +299,7 @@
        "12  yoseph     1.2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "82c2a369",
    "metadata": {},
    "outputs": [
@@ -474,7 +420,7 @@
        "13    binod     5.5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
